apollo-federation/src/sources/connect/validation/snapshots/validation_tests@relative_connect_url_without_source.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/relative_connect_url_without_source.graphql
---
[
    Message {
        code: RelativeConnectUrlWithoutSource,
        message: "`GET` in `@connect(http:)` on `Query.resources` specifies the relative URL \"/resources\", but no `source` is defined. Either use an absolute URL, or add a `@connect__source`.",
        locations: [
            LineColumn {
                line: 5,
                column: 42,
            }..LineColumn {
                line: 5,
                column: 59,
            },
        ],
    },
]
