apollo-federation/src/sources/connect/validation/snapshots/validation_tests@request_headers.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", result.errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/request_headers.graphql
---
[
    Message {
        code: InvalidHeader,
        message: "In `@source(http.headers:)`: array values aren't valid here",
        locations: [
            5:101..5:111,
            5:101..5:111,
        ],
    },
    Message {
        code: InvalidHeader,
        message: "In `@connect(http.headers:)` on `Query.failOnArray`: array values aren't valid here",
        locations: [
            28:68..28:78,
            28:68..28:78,
        ],
    },
    Message {
        code: InvalidUrl,
        message: "In `GET` in `@connect(http:)` on `Query.failOnArray`: array values aren't valid here",
        locations: [
            27:61..27:71,
            27:61..27:71,
        ],
    },
]
