apollo-federation/src/sources/connect/validation/snapshots/validation_tests@rest-good.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/rest-good.graphql
---
[]
