apollo-federation/src/sources/connect/validation/snapshots/validation_tests@select_nonexistant_group.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/select_nonexistant_group.graphql
---
[
    Message {
        code: SelectedFieldNotFound,
        message: "`@connect(selection:)` on `Query.me` contains field `group`, which does not exist on `User`.",
        locations: [
            8:81..8:93,
        ],
    },
]
