apollo-federation/src/sources/connect/validation/snapshots/validation_tests@source_directive_rename.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", result.errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/source_directive_rename.graphql
---
[
    Message {
        code: InvalidUrlScheme,
        message: "Base URL for `@api(baseURL:)` did not start with http:// or https://.",
        locations: [
            6:40..6:54,
        ],
    },
]
