apollo-federation/src/sources/connect/validation/snapshots/validation_tests@subscriptions_with_connectors.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", result.errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/subscriptions_with_connectors.graphql
---
[
    Message {
        code: SubscriptionInConnectors,
        message: "A subscription root type is not supported when using `@connect`.",
        locations: [
            13:6..13:18,
        ],
    },
]
